I have changed bgcolor in css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		</head>
 <body>
 	<h1>Title</h1>
+	<h2>Title 2222</h2>
 	
 	<img src="https://api.fnkr.net/testimg/400x400/00CED1/FFF/?text=img+placeholder">
 
