--- a/index.html
+++ b/index.html
@@ -9,9 +9,67 @@
 <body>
 	<h1>Title</h1>
 	<h2>Title 2222</h2>
-	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique itaque, vel consectetur nam amet, obcaecati et iure, deleniti placeat officia animi! Eveniet atque totam similique in, debitis est corporis quae.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+		 Consectetur error optio dignissimos facilis non dicta, amet <br>
+		 <p align="center">	<strong> unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, sequi.</strong> <i>corrupti voluptatibus sapiente sequi</i>, fuga, porro nulla voluptates nobis possimus explicabo tenetur architecto itaque! Dolor, delectus sequi vel ratione non distinctio quas, dolores minus ullam quidem aliquam sint. Ex odit ducimus inventore debitis!</p>
+		 <ol>
+				<li> <a href="#history"> History</a></li>
+				<li> <a href="#structure"> Structure</a></li>
+				<li> <a href="#code"> Code</a></li>
+					</ol>
 	
-	<img src="https://api.fnkr.net/testimg/400x400/00CED1/FFF/?text=img+placeholder">
+	<p align="center"> <img src="https://api.fnkr.net/testimg/150x150/00CED1/FFF/?text=img+placeholder"> </p>
+
+	<h1>Заголовок</h1>
+	<p align="center"> <strong> <s>Hello</strong> </s>	</p>
+	<ul>
+		<li>Chapter1</li>
+		<li>Chapter2</li>
+		<li>Chapter3</li>
+		<li>Chapter4</li>
+		<!--I have writeen something-->
+		<a href="https://www.google.com" target="blanc">My first link</a>
+	</ul>
+	<h2 id="contents">Title</h2>
+
+	<h2 id="history"> History</h2>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, consequuntur minus. Suscipit deleniti mollitia saepe amet eaque libero labore ipsam reprehenderit nemo, hic quo est esse! Ipsam laboriosam adipisci praesentium.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aspernatur nam vel ipsam totam amet animi explicabo et cumque obcaecati!</p>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, dicta?</p>
+	<h2 id="structure"> Structure</h2>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis minima dicta beatae officia culpa eius perferendis nihil facere porro necessitatibus unde omnis, impedit veniam illum, ipsum vel saepe quaerat minus.</p>
+	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quas ex tempore quae veritatis obcaecati accusamus dolorum suscipit consectetur soluta.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, mollitia.</p>
+
+	<h2 id="code">Code</h2>
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos alias magnam atque laboriosam aut earum quibusdam vel soluta autem, dolorem nulla modi deleniti porro! Molestiae debitis doloremque dicta totam error.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dignissimos accusantium adipisci obcaecati quis sint libero! Nesciunt sint amet blanditiis?</p>
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, tenetur.</p>
+	<table border="1">
+			<tr>
+					<th>Dollars</th>
+					<th>Rubles</th>
+					<th>Pounds</th>
+				</tr>
+		<tr>
+			<td>25</td>
+			<td>24</td>
+			<td>23</td>
+		</tr>
+		<tr>
+			<td>23</td>
+			<td>24</td>
+			<td>25</td>
+		</tr>
+		<tr>
+			<td>21</td>
+			<td>26</td>
+			<td>22</td>
+		</tr>
+
+	</table>
+
+
 
 </body>
 </html>
