--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 		</head>
 <body>
-	<h1>Title</h1>
-	<h2>Title 2222</h2>
+	<h1>Title first level</h1>
+	<h2>Title second level</h2>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
 		 Consectetur error optio dignissimos facilis non dicta, amet <br>
 		 <p align="center">	<strong> unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, sequi.</strong> <i>corrupti voluptatibus sapiente sequi</i>, fuga, porro nulla voluptates nobis possimus explicabo tenetur architecto itaque! Dolor, delectus sequi vel ratione non distinctio quas, dolores minus ullam quidem aliquam sint. Ex odit ducimus inventore debitis!</p>
