--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</tr>
 
 	</table>
-	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckOysVSu-fL-S02zz6ttEhstnoDX3_3WwNTmk09UaLYUCoxA/viewform?embedded=true" width="640" height="806" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>
+	<!--<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckOysVSu-fL-S02zz6ttEhstnoDX3_3WwNTmk09UaLYUCoxA/viewform?embedded=true" width="640" height="806" frameborder="0" marginheight="0" marginwidth="0">Загрузка...</iframe>-->
 
 
 
