I am studying HTML5

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
-
-		</head>
+			<head>
+					<meta charset="UTF-8">
+					<title>Document</title>
+					<link type="text/css" rel="stylesheet" href="style.css">
+			</head>
 <body>
 	<h1>Title first level</h1>
 	<h2>Title second level</h2>
@@ -33,9 +32,9 @@
 	<h2 id="contents">Title</h2>
 
 	<h2 id="history"> History</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, consequuntur minus. Suscipit deleniti mollitia saepe amet eaque libero labore ipsam reprehenderit nemo, hic quo est esse! Ipsam laboriosam adipisci praesentium.</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aspernatur nam vel ipsam totam amet animi explicabo et cumque obcaecati!</p>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, dicta?</p>
+	<p class="myfirstclass">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, consequuntur minus. Suscipit deleniti mollitia saepe amet eaque libero labore ipsam reprehenderit nemo, hic quo est esse! Ipsam laboriosam adipisci praesentium.</p>
+	<p class="mysecondclass">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aspernatur nam vel ipsam totam amet animi explicabo et cumque obcaecati!</p>
+	<p class="mythirdclass">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, dicta?</p>
 	<h2 id="structure"> Structure</h2>
 	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis minima dicta beatae officia culpa eius perferendis nihil facere porro necessitatibus unde omnis, impedit veniam illum, ipsum vel saepe quaerat minus.</p>
 	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quas ex tempore quae veritatis obcaecati accusamus dolorum suscipit consectetur soluta.</p>
