--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="ru">
 			<head>
 					<meta charset="UTF-8">
-					<title>Document</title>
+					<title>One</title>
 					<link type="text/css" rel="stylesheet" href="style.css">
 			</head>
 <body>
-	<h1>Title first level</h1>
-	<h2>Title second level</h2>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-		 Consectetur error optio dignissimos facilis non dicta, amet <br>
+	<h1 class="fltitle"> First level title </h1>
+	<h2 class="sndlevel"> Second level title</h2>
+	<p id="ftext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur error optio dignissimos facilis non dicta, amet <br>
 		 <p align="center">	<strong> unde Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, sequi.</strong> <i>corrupti voluptatibus sapiente sequi</i>, fuga, porro nulla voluptates nobis possimus explicabo tenetur architecto itaque! Dolor, delectus sequi vel ratione non distinctio quas, dolores minus ullam quidem aliquam sint. Ex odit ducimus inventore debitis!</p>
 		 <ol>
 				<li> <a href="#history"> History</a></li>
@@ -17,7 +16,7 @@
 				<li> <a href="#code"> Code</a></li>
 					</ol>
 	
-	<p align="center"> <img src="https://api.fnkr.net/testimg/150x150/00CED1/FFF/?text=img+placeholder"> </p>
+	<p align="center"> <img src="s1200.webp" border="none" width="" height="" alt="GTR"> </p>
 
 	<h1>Заголовок</h1>
 	<p align="center"> <strong> <s>Hello</strong> </s>	</p>
@@ -44,6 +43,7 @@
 	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos alias magnam atque laboriosam aut earum quibusdam vel soluta autem, dolorem nulla modi deleniti porro! Molestiae debitis doloremque dicta totam error.</p>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dignissimos accusantium adipisci obcaecati quis sint libero! Nesciunt sint amet blanditiis?</p>
 	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, tenetur.</p>
+	<div class="line"></div>
 	<table border="1">
 			<tr>
 					<th>Dollars</th>
@@ -77,7 +77,28 @@
 		</li>
 		<li>2</li>
 	</ul>-->
-
+	<!----<h1>Невероятно многоуровневый список</h1>
+    <ol>
+      <li>Первый элемент
+        <ol>
+          <li>Второй уровень
+            <ol>
+              <li>Третий уровень
+                <ol>
+                  <li>Четвёртый уровень</li>
+                </ol>
+              </li>
+            </ol>
+          </li>
+        </ol>
+      </li>
+      <li>Второй элемент</li>
+    </ol>-->
+<div class="box">
+<div class="line_vert_1"></div><hr>
+<div class="line_vert_2"></div><hr>
+<div class="line_vert_3"></div><hr>
+</div>
 
 </body>
 </html>
