I have changed some parts of lorem text

--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 	<h2 id="contents">Title</h2>
 
 	<h2 id="history"> History</h2>
-	<p class="myfirstclass">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, consequuntur minus. Suscipit deleniti mollitia saepe amet eaque libero labore ipsam reprehenderit nemo, hic quo est esse! Ipsam laboriosam adipisci praesentium.</p>
+	<p class="myfirstclass">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias unde quo inventore, natus nam voluptatem accusamus qui perspiciatis iste quod?</p>
 	<p class="mysecondclass">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit aspernatur nam vel ipsam totam amet animi explicabo et cumque obcaecati!</p>
 	<p class="mythirdclass">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, dicta?</p>
 	<h2 id="structure"> Structure</h2>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis minima dicta beatae officia culpa eius perferendis nihil facere porro necessitatibus unde omnis, impedit veniam illum, ipsum vel saepe quaerat minus.</p>
-	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quas ex tempore quae veritatis obcaecati accusamus dolorum suscipit consectetur soluta.</p>
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem eius quas ipsum illo saepe nostrum pariatur qui veniam quisquam aut.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, mollitia.</p>
 
 	<h2 id="code">Code</h2>
-	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos alias magnam atque laboriosam aut earum quibusdam vel soluta autem, dolorem nulla modi deleniti porro! Molestiae debitis doloremque dicta totam error.</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dignissimos accusantium adipisci obcaecati quis sint libero! Nesciunt sint amet blanditiis?</p>
+	<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum cumque ratione dolores facilis nulla odio!</p>
 	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, tenetur.</p>
 	<div class="line"></div>
 	<table border="1">
@@ -92,8 +90,32 @@
           </li>
         </ol>
       </li>
-      <li>Второй элемент</li>
-    </ol>-->
+			<li>Второй элемент</li>
+			<h1>Расшифровка тегов списков</h1>
+    <dl>
+      <dt>dl</dt>
+      <dd>Definition List, сам список определений</dd>
+
+      <dt>dt</dt>
+      <dd>Definition Term, термин</dd>
+
+      <dt>dd</dt>
+      <dd>Definition Definition, определение термина</dd>
+      <dt>ul</dt>
+      <dd>Unordered List, неупорядоченный список</dd>
+      <dt>li</dt>
+      <dd>List Item, элемент списка</dd>
+    </dl>
+		</ol>-->
+		<ol class="coloredlist" start="2" type="a">
+			<li><span>Value 1</span></li>
+			<li><span>Value 2</span></li>
+		</ol>
+		<p class="Allotment">Тэги strong и b, являются парными тэгами.</p>
+		Тэг Strong определяет важность выделенного элемента.<br>
+		Тэг b предназначен для выделения текста без придания ему особой важности.
+
+
 <div class="box">
 <div class="line_vert_1"></div><hr>
 <div class="line_vert_2"></div><hr>
